[package]
edition = "2021"
name = "bandwhich"
description = "Display current network utilization by process, connection and remote IP/hostname"
version = "0.20.0"
homepage = "https://github.com/imsnif/bandwhich"
repository = "https://github.com/imsnif/bandwhich"
readme = "README.md"
authors = [
  "Aram Drevekenin <aram@poor.dev>",
  "Eduardo Toledo <etoledom@icloud.com>",
  "Eduardo Broto <ebroto@tutanota.com>",
  "Kelvin Zhang <zhangxp1998@gmail.com>",
  "Brooks Rady <b.j.rady@gmail.com>"
]
keywords = ["networking", "utilization", "cli"]
categories = ["network-programming", "command-line-utilities"]
license = "MIT"
exclude = ["src/tests/*", "demo.gif"]

[dependencies]
pnet = "0.26.0"
ipnetwork = "0.16.0"
tui = { version = "0.16", default-features = false, features = ["crossterm"]}
crossterm = "0.20"
structopt = "0.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
regex = "1"
lazy_static = "1.4.0"
tokio = { version = "1.0", features = ["rt", "sync"] }
trust-dns-resolver = "0.20.3"
async-trait = "0.1"
unicode-width = "0.1.8"
resolv-conf = "0.7.0"

[target.'cfg(target_os="windows")'.dependencies]
netstat2 = "0.9.1"
sysinfo = "0.20.3"

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.10.1"

[dev-dependencies]
insta = "0.12.0"
pnet_base = "0.26.0"
cargo-insta = "0.11.0"
packet-builder = "0.5.0"
regex = "1"

[target.'cfg(target_os="windows")'.build-dependencies]
http_req = "0.7.0"
zip = "0.5.6"

[profile.release]
lto = 'fat'
codegen-units = 1
